--- a/二进制/二进制.vcxproj.filters
+++ b/二进制/二进制.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="二进制.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Binary.h">
+      <Filter>头文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
